--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-87">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hola cometichiami</title>
@@ -13,4 +13,5 @@ I was hoping to see u again very soon
 i wass intending to know things better and get  more information on white house
 
 </body>
+<footer>joke</footer>
 </html>
